force-app/main/default/objects/NCMT_Quality_Code_Parameter__c/NCMT_Quality_Code_Parameter__c.object-meta.xml
<CustomObject>
    <description>NCMT Quality Lookups</description>
    <label>Quality Code Parameter</label>
    <nameField>
        <label>Quality Lookup code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quality Code Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>