force-app/main/default/objects/NCMT_Quality_Code_Parameter__c/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <description>Base</description>
    <label>Base</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>