force-app/main/default/objects/NCMT_Quality_Code_Parameter__c/fields/Mid__c.field-meta.xml
<CustomField>
    <fullName>Mid__c</fullName>
    <description>Mid</description>
    <label>Mid</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>