force-app/main/default/objects/NCMT_Quality_Code_Parameter__c/listViews/Quality_Code_Parameters.listView-meta.xml
<ListView>
    <fullName>Quality_Code_Parameters</fullName>
    <columns>NAME</columns>
    <columns>CladdingDef_Description__c</columns>
    <columns>Base__c</columns>
    <columns>Mid__c</columns>
    <columns>Top__c</columns>
    <columns>Cladding_Quality__c</columns>
    <columns>Cladding_List__c</columns>
    <filterScope>Everything</filterScope>
    <label>Quality Code Parameters</label>
</ListView>